# OAIP

./: Makefile  engine.py  pyproject.toml
VD_games/: .gitignore  Makefile  README.md  pyproject.toml
VD_games/VD_games/: cli.py
brain_games/: __init__.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
