[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brain-games"
version = "1.0.0"
description = "A collection of simple math games"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
brain-calc = "scripts.brain_calc:main"
brain-gcd = "scripts.brain_gcd:main"
