[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brain-games"
version = "1.0.0"
description = "A collection of simple math games"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-calc = "scripts.brain_calc:main"
brain-gcd = "scripts.brain_gcd:main"
brain-progression = "scripts.brain_progression:main"
brain-prime = "scripts.brain_prime:main"
brain-even = "scripts.brain_even:main"
