[project]
name = "vd-games"
version = "0.1.0"
description = "A collection of simple games"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "prompt",
]
requires-python = ">=3.8"

[project.scripts]
VD_games = "VD_games.scripts.VD_games:main"
VD_even = "VD_games.scripts.VD_even:run_even_game"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["VD_games"]
